@@ -1,3 +1,13 @@
+2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Rubber-stamped by Xan Lopez.
+
+        Make sure the text encoding machinery is initialized from the main
+        frame, before opening the icon database.
+
+        * webkit/webkitprivate.cpp:
+        (webkit_init):
+
 2009-12-19  Alejandro G. Castro  <alex@igalia.com>
 
         Reviewed by Xan Lopez.
